Fix object-fit styling on IE and Edge
The CSS property object-fit is not supported in older IE browsers and
Edge (though it's currently being implemented for Edge) resulting in
images being skewd when window is resized. To fix this we include a
javascript file created by bfred-it on github (link:
https://github.com/bfred-it/object-fit-images/).

As explained in his repo, by including the styling "font-family:
'object-fit: cover' " in the stylings for the image containers, we can
fix this problem.

--- a/source/assets/stylesheets/styles/_roles_tile.scss
+++ b/source/assets/stylesheets/styles/_roles_tile.scss
@@ -85,7 +85,10 @@
   height: 100%;
   width: 100%;
   margin: auto;
+  //Allows image to auto crop
   object-fit: cover;
+  //Fixes object-fit for IE browsers using object-fit JS library
+  font-family: 'object-fit: cover';
 
   @include breakpoint($tablet-breakpoint) {
     margin-right: 0;
